<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_movie_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.popularmovies.MovieDetailsActivity">

        <ImageView
            android:layout_width="185dp"
            app:srcCompat="@android:color/darker_gray"
            android:id="@+id/iv_poster"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="277dp" />

        <TextView
            android:text="@string/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textSize="18sp"
            android:id="@+id/title_text"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/iv_poster" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_toRightOf="@+id/iv_poster"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="12dp"
            android:id="@+id/year" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text"
            android:layout_toRightOf="@+id/iv_poster"
            android:layout_toEndOf="@+id/iv_poster"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:id="@+id/title" />

        <TextView
            android:text="@string/overview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_poster"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:id="@+id/overview_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/overview_text"
            android:layout_toRightOf="@+id/overview_text"
            android:layout_toEndOf="@+id/overview_text"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textSize="18sp"
            android:id="@+id/overview" />

        <TextView
            android:text="@string/avgVote_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:id="@+id/avgVote_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/avgVote_text"
            android:layout_toRightOf="@+id/avgVote_text"
            android:layout_marginLeft="12sp"
            android:textSize="18sp"
            android:id="@+id/avgVote"
            android:text="" />

        <Button
            android:id="@+id/trailerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/trailers_button_text"
            android:layout_below="@+id/avgVote"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/reviewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews_button_text"
            android:layout_below="@+id/trailerButton"
            android:layout_alignEnd="@+id/trailerButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/favoriteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_favorite_button_text"
            android:layout_below="@+id/reviewButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12sp"
            android:background="@color/colorAccent"/>

    </RelativeLayout>

 </ScrollView>
